--- a/springcloud-eurekaserver/src/main/resources/application-peer1.yml
+++ b/springcloud-eurekaserver/src/main/resources/application-peer1.yml
@@ -9,6 +9,9 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://peer2:8762/eureka/
+#  server:
+#    enable-self-preservation: false
+#    eviction-interval-timer-in-ms: 500000
 
 
 #      java -jar microservice-discovery-eureka-0.0.1-SNAPSHOT.jar --spring.profiles.active=peer1
