--- a/springcloud-eurekaserver/src/main/resources/application-peer2.yml
+++ b/springcloud-eurekaserver/src/main/resources/application-peer2.yml
@@ -9,6 +9,9 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://peer1:8761/eureka/
+#  server:
+#    enable-self-preservation: false
+#    eviction-interval-timer-in-ms: 500000
 
 
-#      java -jar microservice-discovery-eureka-0.0.1-SNAPSHOT.jar --spring.profiles.active=peer2  
+#      java -jar microservice-discovery-eureka-0.0.1-SNAPSHOT.jar --spring.profiles.active=peer2
