--- a/springcloud-eurekaserver/src/main/resources/application.yml
+++ b/springcloud-eurekaserver/src/main/resources/application.yml
@@ -1,24 +1,11 @@
----
-spring:
-  profiles:
-    active: peer3# 指定profile=peer1
 server:
-  port: 8763
+  port: 8761
+
 eureka:
   instance:
-    hostname: peer3 # 指定当profile=peer1时，主机名
+    hostname: discovery
   client:
-    serviceUrl:
-      defaultZone: http://peer4:8764/eureka/ # 将自己注册到peer2这个Eureka上面去
----
-spring:
-  profiles:
-    active: peer4
-server:
-  port: 8764
-eureka:
-  instance:
-    hostname: peer4
-  client:
-    serviceUrl:
-      defaultZone: http://peer3:8763/eureka/
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://discovery:8761/eureka/
